--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row">
             <div class="content">
                 <h3>fresh coffee and cookies in the morning</h3>
-                <a href="http://wa.me/6281282809971" class="btn">get yours <b>out with ideas</b> now</a>
+                <a href="http://wa.me/6281282809971" target="_blank" class="btn">get yours <b>out with ideas</b> now</a>
             </div>
             <div class="image">
                 <img src="image\home-img.png" class="main-home-image" alt="">
@@ -65,7 +65,7 @@
 
         <div class="row">
             <div class="image">
-                <img src="image/about-img.png" alt="">
+                <img src="edit-img\about-img.png" alt="">
             </div>
 
             <div class="content">
@@ -241,8 +241,8 @@
 
             <div class="box">
                 <h3>contact info</h3>
-                <a href="http://wa.me/6281282809971"><i class="fab fa-whatsapp"></i> whatsapp</a>
-                <a href="https://www.instagram.com/ide_copas/"><i class="fab fa-instagram"></i> instagram</a>
+                <a href="http://wa.me/6281282809971" target="_blank"><i class="fab fa-whatsapp"></i> whatsapp</a>
+                <a href="https://www.instagram.com/ide_copas/" target="_blank"><i class="fab fa-instagram"></i> instagram</a>
             </div>
 
             <div class="box">
